--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,11 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<app-orbit-list [satellites]="sourceList"></app-orbit-list>
+<app-orbit-list [satellites]="displayList"></app-orbit-list>
+<div class="search-form">
+  <input #searchTerm (keyup.enter)='search(searchTerm.value)' type="text" placeholder="Type to search">
+  <button (click)='search(searchTerm.value)'>Search</button>
+</div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
