--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
 
 <app-orbit-list [satellites]="displayList"></app-orbit-list>
 <div class="search-form">
-  <input #searchTerm (keyup.enter)='search(searchTerm.value)' type="text" placeholder="Type to search">
+  <input #searchTerm (keyup.enter)='search(searchTerm.value)' type="text" placeholder="Search here">
   <button (click)='search(searchTerm.value)'>Search</button>
 </div>
 
